fix: fixed N+1 problem and added tests