@@ -3,6 +3,7 @@ package ru.yandex.practicum.filmorate.storage.impl.dao;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
@@ -18,36 +19,37 @@ import java.sql.Date;
 import java.sql.PreparedStatement;
 import java.sql.Statement;
 import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
 public class FilmDbStorage implements FilmStorage {
 
     private final JdbcTemplate jdbcTemplate;
+    private final NamedParameterJdbcTemplate namedParameterJdbcTemplate;
     private final FilmRowMapper filmRowMapper;
+    private final RatingRowMapper ratingRowMapper;
 
     @Override
     public Collection<Film> getAll() {
         String sql = "SELECT * FROM films";
         List<Film> films = jdbcTemplate.query(sql, filmRowMapper);
-        for (Film film : films) {
-            loadLinkedFilmData(film);
-        }
+        loadLinkedDataForBatch(films);
         return films;
     }
 
     @Override
     public Optional<Film> get(Long id) {
         String sql = "SELECT * FROM films WHERE id = ?";
-        Film film = null;
         try {
-            film = jdbcTemplate.queryForObject(sql, filmRowMapper, id);
-            loadLinkedFilmData(film);
+            Film film = jdbcTemplate.queryForObject(sql, filmRowMapper, id);
+            loadLinkedDataForBatch(Collections.singletonList(film));
+            return Optional.of(film);
         } catch (EmptyResultDataAccessException e) {
             throw new FilmNotFoundException(
                     "Film with id %d doesn't exist".formatted(id));
         }
-        return Optional.ofNullable(film);
     }
 
     @Override
@@ -90,7 +92,6 @@ public class FilmDbStorage implements FilmStorage {
         deleteLinkedFilmData(film);
         saveLinkedFilmData(film);
         return Optional.of(film);
-
     }
 
     @Override
@@ -103,21 +104,89 @@ public class FilmDbStorage implements FilmStorage {
                      "LIMIT ?";
 
         List<Film> films = jdbcTemplate.query(sql, filmRowMapper, count);
-        for (Film film : films) {
-            loadLinkedFilmData(film);
-        }
+        loadLinkedDataForBatch(films);
         return films;
     }
 
-    private void loadLinkedFilmData(Film film) {
-        loadLikes(film);
-        loadGenres(film);
-        loadRating(film);
+    private void loadLinkedDataForBatch(List<Film> films) {
+
+        Map<Long, Film> filmMap = films.stream()
+                                       .collect(Collectors.toMap(Film::getId,
+                                                                 Function.identity()));
+
+        Set<Long> filmIds = filmMap.keySet();
+        Set<Long> ratingIds = films.stream()
+                                   .map(f -> f.getRating()
+                                              .getId())
+                                   .collect(Collectors.toSet());
+        Map<Long, Set<Long>> likesMap = loadLikesForFilms(filmIds);
+
+        Map<Long, List<Genre>> genresMap = loadGenresForFilms(filmIds);
+
+        Map<Long, Rating> ratingsMap = loadRatingsByIds(ratingIds);
+
+        for (Film film : films) {
+            film.setSetUserIdsLikedThis(
+                    likesMap.getOrDefault(film.getId(), new HashSet<>()));
+            film.setGenres(
+                    genresMap.getOrDefault(film.getId(), new ArrayList<>()));
+
+            Rating fullRating = ratingsMap.get(film.getRating()
+                                                   .getId());
+            film.setRating(fullRating);
+        }
     }
 
-    private void deleteLinkedFilmData(Film film) {
-        deleteGenres(film);
-        deleteLikes(film);
+    private Map<Long, Set<Long>> loadLikesForFilms(Set<Long> filmIds) {
+        String sql = "SELECT film_id, user_id FROM film_likes WHERE film_id IN (:filmIds)";
+        Map<String, Object> params = Collections.singletonMap("filmIds",
+                                                              filmIds);
+
+        return namedParameterJdbcTemplate.query(sql, params, rs -> {
+            Map<Long, Set<Long>> result = new HashMap<>();
+            while (rs.next()) {
+                Long filmId = rs.getLong("film_id");
+                Long userId = rs.getLong("user_id");
+                result.computeIfAbsent(filmId, k -> new HashSet<>())
+                      .add(userId);
+            }
+            return result;
+        });
+    }
+
+    private Map<Long, List<Genre>> loadGenresForFilms(Set<Long> filmIds) {
+        String sql = "SELECT fg.film_id, g.id, g.name " +
+                     "FROM film_genres fg " +
+                     "JOIN ref_genre g ON fg.genre_id = g.id " +
+                     "WHERE fg.film_id IN (:filmIds)";
+
+        Map<String, Object> params = Collections.singletonMap("filmIds",
+                                                              filmIds);
+
+        return namedParameterJdbcTemplate.query(sql, params, rs -> {
+            Map<Long, List<Genre>> result = new HashMap<>();
+            while (rs.next()) {
+                Long filmId = rs.getLong("film_id");
+                Long genreId = rs.getLong("id");
+                String genreName = rs.getString("name");
+                result.computeIfAbsent(filmId, k -> new ArrayList<>())
+                      .add(new Genre(genreId, genreName));
+            }
+            return result;
+        });
+    }
+
+    private Map<Long, Rating> loadRatingsByIds(Set<Long> ratingIds) {
+        String sql = "SELECT id, code FROM ref_rating WHERE id IN (:ratingIds)";
+        Map<String, Object> params = Collections.singletonMap("ratingIds",
+                                                              ratingIds);
+
+        List<Rating> ratings = namedParameterJdbcTemplate.query(sql, params,
+                                                                ratingRowMapper);
+
+        return ratings.stream()
+                      .collect(Collectors.toMap(Rating::getId,
+                                                Function.identity()));
     }
 
     private void saveLinkedFilmData(Film film) {
@@ -125,15 +194,23 @@ public class FilmDbStorage implements FilmStorage {
         saveFilmGenres(film);
     }
 
-    private void saveLikes(Film film) {
+    private void deleteLinkedFilmData(Film film) {
+        deleteGenres(film);
+        deleteLikes(film);
+    }
 
+    private void saveLikes(Film film) {
         String sql = "INSERT INTO film_likes (film_id, user_id) VALUES (?, ?)";
-        List<Object[]> batchArgs = new HashSet<>(
-                film.getSetUserIdsLikedThis()).stream()
-                                              .map(userId -> new Object[]{
-                                                      film.getId(), userId
-                                              })
-                                              .toList();
+        Set<Long> likes = film.getSetUserIdsLikedThis();
+        if (likes == null || likes.isEmpty())
+            return;
+
+        List<Object[]> batchArgs = likes.stream()
+                                        .map(userId -> new Object[]{
+                                                film.getId(),
+                                                userId
+                                        })
+                                        .collect(Collectors.toList());
 
         jdbcTemplate.batchUpdate(sql, batchArgs);
     }
@@ -143,31 +220,23 @@ public class FilmDbStorage implements FilmStorage {
         jdbcTemplate.update(sql, film.getId());
     }
 
-    private void loadLikes(Film film) {
-        String sql = "SELECT user_id FROM film_likes WHERE film_id = ?";
-        List<Long> likes = jdbcTemplate.queryForList(sql, Long.class,
-                                                     film.getId());
-        film.setSetUserIdsLikedThis(new HashSet<>(likes));
-    }
-
-    private void loadRating(Film film) {
-        String sql = "SELECT id, code FROM ref_rating WHERE id = ?";
-
-        Rating rating = jdbcTemplate.queryForObject(sql, new RatingRowMapper(),
-                                                    film.getRating()
-                                                        .getId());
-        film.setRating(rating);
-
-    }
-
     private void saveFilmGenres(Film film) {
         String sql = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
-        List<Object[]> batchArgs = new HashSet<>(film.getGenres()).stream()
-                                                                  .map(genre -> new Object[]{
-                                                                          film.getId(),
-                                                                          genre.getId()
-                                                                  })
-                                                                  .toList();
+        List<Genre> genres = film.getGenres();
+        if (genres == null || genres.isEmpty())
+            return;
+
+        Set<Long> uniqueGenreIds = film.getGenres()
+                                       .stream()
+                                       .map(Genre::getId)
+                                       .collect(Collectors.toSet());
+
+        List<Object[]> batchArgs = uniqueGenreIds.stream()
+                                                 .map(genreId -> new Object[]{
+                                                         film.getId(),
+                                                         genreId
+                                                 })
+                                                 .toList();
 
         jdbcTemplate.batchUpdate(sql, batchArgs);
     }
@@ -176,17 +245,4 @@ public class FilmDbStorage implements FilmStorage {
         String sql = "DELETE FROM film_genres WHERE film_id = ?";
         jdbcTemplate.update(sql, film.getId());
     }
-
-    private void loadGenres(Film film) {
-        String sql = "SELECT g.id, g.name " +
-                     "FROM ref_genre g " +
-                     "JOIN film_genres fg ON g.id = fg.genre_id " +
-                     "WHERE fg.film_id = ?";
-
-        List<Genre> genres = jdbcTemplate.query(sql, (rs, rowNum) -> new Genre(
-                rs.getLong("id"), rs.getString("name")), film.getId());
-
-        film.setGenres(genres);
-    }
-
 }
